datefield issue on iOs

--- a/styles/sections/_header.scss
+++ b/styles/sections/_header.scss
@@ -246,7 +246,9 @@
                     flex: 3;
                     .date {
                         box-sizing: border-box;
-                        display: inline-block;
+                        appearance: textfield;
+                        -webkit-appearance: textfield;
+                        -moz-appearance: textfield;
                         height: 3.3125rem;
                         width: 100%;
                     }
